--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,18 +2,19 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-android'
-    id 'kotlin-android-extensions'
+//    id 'kotlin-android-extensions'
+
     id 'com.google.gms.google-services'
     id 'kotlin-kapt'
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.social"
         minSdk 21
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
         resConfigs "en"
@@ -40,18 +41,19 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.4.2'
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.google.firebase:firebase-firestore-ktx:24.2.1'
-    implementation 'androidx.annotation:annotation:1.4.0'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.0'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.5.0'
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.4.5'
+    implementation 'androidx.annotation:annotation:1.6.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
+    implementation 'androidx.core:core-ktx:1.9.0'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     //androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+    androidTestImplementation "androidx.arch.core:core-testing:2.2.0"
     androidTestImplementation ("androidx.test.espresso:espresso-core:3.4.0", {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -68,7 +70,7 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-auth:8.0.1'
 //    implementation 'com.firebaseui:firebase-ui-database:8.0.1'
 //    implementation 'com.firebaseui:firebase-ui-storage:8.0.1'
-    implementation 'com.google.android.gms:play-services-auth:20.2.0'
+    implementation 'com.google.android.gms:play-services-auth:20.4.1'
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
@@ -76,8 +78,8 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
     implementation("androidx.cardview:cardview:1.0.0")
     // ViewModel,Room and LiveData
-    def lifecycle_version = "2.5.1"
-    def roomVersion = "2.4.3"
+    def lifecycle_version = "2.6.1"
+    def roomVersion = "2.5.1"
 
     implementation("androidx.room:room-runtime:$roomVersion")
     annotationProcessor("androidx.room:room-compiler:$roomVersion")
@@ -101,5 +103,7 @@ dependencies {
 
     /* coroutines support for firebase operations */
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4'
+    implementation("androidx.biometric:biometric:1.2.0-alpha05")
+
 
 }
